반차랑 조퇴랑 시간 안겹치는 데 겹침 상신 소수점 둘째자리까지 포맷팅 부서중복생성 제약조건 추가

--- a/src/main/resources/templates/dept/create.html
+++ b/src/main/resources/templates/dept/create.html
@@ -48,7 +48,6 @@
 
         <label for= "useYn">사용 여부
           <input type="checkbox" id="useYn" name="useYn" checked>
-          <span class="slider"></span>
         </label>
 
         <button type="submit">부서 생성</button>
@@ -57,5 +56,13 @@
 
   </main>
   <script th:src="@{/js/script.js}"></script>
+  <script th:inline="javascript">
+    /*<![CDATA[*/
+    const errorMsg = /*[[${message}]]*/ null;
+    if (errorMsg != null) {
+      alert(errorMsg);
+    }
+    /*]]>*/
+  </script>
 </body>
 </html>
