FE - 부서관리_리더 highlight 수정 - 일반근태신청_익일,예상근로시간 소수점

--- a/src/main/resources/templates/att/general.html
+++ b/src/main/resources/templates/att/general.html
@@ -139,7 +139,7 @@
                     <span th:case="'REQUESTED'">상신</span>
                     <span th:case="'APPROVED'">승인</span>
                     <span th:case="'REJECTED'">반려</span>
-                    <span th:case="*"></span>
+                    <span th:text="${#numbers.formatDecimal(emp.expectedWorkHours, 1, 2)}"></span>
                 </td>
                 <td class="applicant" th:text="${emp.applicant}"></td>
             </tr>
