--- a/src/main/resources/static/css/att.css
+++ b/src/main/resources/static/css/att.css
@@ -129,7 +129,6 @@ input[readonly]:focus {
 #attTable select {
     width: 100%;
     box-sizing: border-box;
-    padding: 6px 8px;
     border: 1px solid #ccc;
     border-radius: 4px;
     background-color: #fff;
@@ -202,4 +201,17 @@ input[type="date"]:disabled {
     color: #888;               /* 글자 회색 */
     pointer-events: none;      /* 클릭 등 모든 상호작용 차단 */
     opacity: 0.7;              /* 선택 강조 감소 */
+}
+
+
+/* 신청시각(readonly 느낌) */
+.isTodayRequest.readonly {
+    pointer-events: none;       /* 클릭 방지 */
+    background-color: #fff;     /* 배경 흰색 */
+    color: #000;                /* 글씨 검정 */
+    -webkit-appearance: none;   /* 크롬/사파리 */
+    -moz-appearance: none;      /* 파이어폭스 */
+    appearance: none;           /* 표준 */
+    border: 1px solid #ccc;     /* 기존 테두리 유지 */
+    padding-right: 0.5em;       /* 화살표 공간 확보 */
 }
