--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -52,6 +52,7 @@ body {
 main .container {
     flex: 1 !important;
     width: 100% !important;
+    padding: 20px; !important;
 }
 
 .container h2 {
@@ -68,7 +69,6 @@ main .container {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 20px;
-    margin-bottom: 20px;
 }
 /* 연차 현황 카드 */
 .annual-leave-card {
@@ -286,8 +286,19 @@ main .container {
     cursor: pointer;
     transition: all 0.2s ease;
 }
-
+.attendance-buttons {
+    display: flex;      /* 부모를 flex 컨테이너로 */
+    gap: 10px;          /* 버튼 사이 간격 */
+    margin-top: 10px;
+}
+.attendance-buttons form {
+    flex: 1;            /* 각 form이 flex:1 */
+}
+.attendance-buttons form .btn {
+    width: 100%;        /* 버튼이 form 전체 폭 차지 */
+}
 .btn-primary {
+    flex: 1;
     background: #3498db;
     color: white;
 }
@@ -297,6 +308,7 @@ main .container {
 }
 
 .btn-success {
+    flex: 1;
     background: #27ae60;
     color: white;
 }
@@ -312,7 +324,7 @@ main .container {
 }
 
 .task-stats {
-    display: flex;
+    /*display: flex;*/
     gap: 20px;
     margin-bottom: 20px;
     padding: 16px;
