FE 근무패턴 - css 수정(header)

--- a/src/main/resources/templates/pattern/main.html
+++ b/src/main/resources/templates/pattern/main.html
@@ -14,7 +14,7 @@
     <div class="container">
         <div class="header">
             <div class="header-top">
-                <h2>🏢 근태패턴별 캘린더</h2>
+                <h2>근태패턴별 캘린더</h2>
                 <!-- 상단 액션 버튼 -->
                 <div class="button-group">
                     <button type="button" id="topActionBtn" class="btn">패턴 추가</button>
