--- a/src/main/resources/templates/deptAttSearch/main.html
+++ b/src/main/resources/templates/deptAttSearch/main.html
@@ -14,6 +14,9 @@
     <div th:replace="~{sidebar.html::sidebar}"></div>
 
     <div class="container">
+        <div class="header">
+            <h1>부서근태 조회</h1>
+        </div>
         <div class="pann">
             <!-- 검색 박스 -->
             <div class="search-box">
