--- a/src/main/resources/static/css/dept.css
+++ b/src/main/resources/static/css/dept.css
@@ -440,6 +440,33 @@ main, .container, .dept-detail-container {
     font-weight: bold;
 }
 
+/* dept-main 안의 create-btn만 적용 */
+.container .header > a > button.create-btn {
+    margin: 0;
+    padding: 10px 20px;
+    background-color: #0066b3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+    width: fit-content;
+    font-weight: bold;
+}
+
+.container .header button {
+    margin-top: 10px;
+    padding: 10px 20px;
+    background-color: #0066b3;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 14px;
+    cursor: pointer;
+    width: fit-content;
+    font-weight: bold;
+}
+
 .container form button[type="submit"]:hover {
     background-color: #004d8a;
 }
