--- a/src/main/resources/static/css/dept.css
+++ b/src/main/resources/static/css/dept.css
@@ -352,9 +352,9 @@ main {
     display: flex;!important;
     flex: 1;!important;
     overflow: hidden; !important;
+    flex-direction: column;
     /*height: auto; !important;*/
 }
-/* 전체 화면 스크롤 제거, 내부 컨테이너만 스크롤 가능 */
 
 /* 부서 생성 페이지 */
 .container h2 {
