--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,5 +1,4 @@
-<div th:fragment="header"
-     xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<div th:fragment="header">
     <header class="top-header">
         <div class="header-left">
             <h2>
