--- a/src/main/resources/templates/pattern/main.html
+++ b/src/main/resources/templates/pattern/main.html
@@ -17,9 +17,9 @@
                 <h2>근태패턴별 캘린더</h2>
                 <!-- 상단 액션 버튼 -->
                 <div class="button-group">
+                    <button type="button" id="registerPatternBtn" class="btn">패턴 입력</button>
+                    <button type="button" id="savePatternBtn" class="btn">등록</button>
                     <button type="button" id="topActionBtn" class="btn">패턴 추가</button>
-                    <button type="button" id="registerPatternBtn" class="btn">패턴 등록</button>
-                    <button type="button" id="savePatternBtn" class="btn">저장</button>
                 </div>
             </div>
             <form th:action="@{/pattern/main}" method="get" id="searchForm">
